# BLDC-turtle_simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mcb_pmsm_foc_abs_current_loop_mex.slx  mcb_pmsm_foc_abs_current_loop_mex_compare.slx  mcb_pmsm_foc_abs_speed_loop.slx  mcb_pmsm_foc_abs_speed_loop_mex_compare.slx
docs/: 仿真说明.md
mex/: CMakeLists.txt  mex_bldc_foc.cc  mex_bldc_speed_pi.cc
mex/third/: CMakeLists.txt
scripts/: load_motor_param.m
